--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,14 @@
     top: 50%;
     transform: translate(-50%, -50%) rotate(-45deg);
 }
+.wraper{
+    margin: 30px;
+}
 
+.clear{
+    margin-top: 30px;
+    
+}
 @media (max-width: 768px){
     .burger-bar{
         display: block;
